# trade_parsing

./: .env.example  .gitignore  README.md  database.py  delete_trades.py  flask_app.py  models.py  package.json  pyproject.toml  requirements.txt  reset_db.py
brokers/: __init__.py  base_broker.py  charles_schwab.py  fidelity.py  interactive_brokers.py  robinhood.py  symbol_cache.json  symbol_enhancer.py  tastytrade.py  tradingview.py  webull.py
scripts/: process_csv.py  validate_csv.py
templates/: index.html
